--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <script defer src="./script.js"></script>
 </head>
 <body>
-    
+    <div class="game-container">
+        <button id="grid-0" class="game-button" type="button"> </button>
+        <button id="grid-1" class="game-button" type="button"> </button>
+        <button id="grid-2" class="game-button" type="button"> </button>
+        <button id="grid-3" class="game-button" type="button"> </button>
+        <button id="grid-4" class="game-button" type="button"> </button>
+        <button id="grid-5" class="game-button" type="button"> </button>
+        <button id="grid-6" class="game-button" type="button"> </button>
+        <button id="grid-7" class="game-button" type="button"> </button>
+        <button id="grid-8" class="game-button" type="button"> </button>
+    </div>
 </body>
 </html>
